--- a/index.html
+++ b/index.html
@@ -41,15 +41,7 @@
                     <div class="w-9/12 h-full flex justify-center items-center">Avaliações</div>
                 </a>
             </div>
-            <div class="w-56 h-1/6 flex justify-end items-center flex-col">
-                <div
-                    class="w-full h-14 flex justify-center items-center cursor-pointer transition-all hover:bg-gray-100 hover:drop-shadow active:bg-gray-300">
-                    <div class="w-3/12 h-full flex justify-center items-center font-bold text-2xl">
-                        <i class="fa-solid fa-gear"></i>
-                    </div>
-                    <div class="w-9/12 h-full flex justify-center items-center">Configurações</div>
-                </div>
-            </div>
+            <div class="w-56 h-1/6 flex justify-end items-center flex-col"></div>
         </nav>
         <menu class="fixed w-full flex justify-center items-center flex-col z-10">
             <aside class="w-full h-14 flex justify-center items-center bg-gray-200">
@@ -72,12 +64,8 @@
                     <div class="text-white font-bold text-2xl drop-shadow-2xl">Obras:</div>
                 </div>
                 <div class="w-1/3 h-full flex justify-center items-center"></div>
-                <div class="w-1/3 h-full flex justify-start items-end gap-x-2">
-                    <div class="py-1 px-5 pl-4 gap-x-2 flex justify-center items-center font-bold text-gray-300 rounded-lg border border-solid border-gray-300 cursor-pointer transition-all hover:shadow hover:bg-gray-300 hover:text-black hover:border-0">
-                        <i class="fa-solid fa-sliders"></i>
-                        <div>Filtros</div>
-                    </div>
-                    <div onclick="obra_insert(this)" data-insert="1" data-screen_num="1" class="py-1 px-5 flex justify-center items-center font-bold text-gray-300 rounded-lg border border-solid border-gray-300 cursor-pointer transition-all hover:shadow hover:bg-gray-300 hover:text-black hover:border-0">
+                <div class="w-1/3 h-full flex justify-center items-end gap-x-2">
+                    <div onclick="obra_insert(this)" data-insert="1" data-screen_num="1" class="mr-20 py-1 px-5 flex justify-center items-center font-bold text-gray-300 rounded-lg border border-solid border-gray-300 cursor-pointer transition-all hover:shadow hover:bg-gray-300 hover:text-black hover:border-0">
                         Adicionar Obra
                     </div>
                 </div>
@@ -149,16 +137,10 @@
                         <label for="obra_title" class="ml-2 text-base text-white font-bold">Nome da Obra</label>
                         <input type="text" onblur="input_verifyer(this)" data-type="0" id="obra_title" name="obra_title" class="w-8/12 h-8 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300">
                     </div>
-                    <div class="w-full h-1/6 flex justify-center items-center">
-                        <div data-option_num="0" class="w-4/12 h-full flex justify-center gap-y-1 items-center flex-col">
-                            <label for="" class="mr-4 text-base text-white font-bold">Imagem de capa</label>
-                            <div id="image_selector" data-option_num="0" class="mr-4 w-8/12 h-9 flex justify-center items-center rounded text-white font-bold border border-solid border-gray-300 cursor-pointer">
-                                <div onclick="option_change(this)" data-option_num="0" class="w-1/2 h-full flex justify-center items-center rounded-s transition-all bg-[rgba(255,255,255,0.5)]">Não</div>
-                                <div onclick="option_change(this)" data-option_num="1" class="w-1/2 h-full flex justify-center items-center rounded-e transition-all">Sim</div>
-                            </div>
-                        </div>
-                        <div class="w-8/12 h-full py-0.5 flex justify-start items-end ">
-                            <input type="text" onblur="input_verifyer(this)" data-type="0" onblur="image_selector(this)" id="obra_title" name="obra_title" disabled class="w-9/12 h-9 mb-2.5 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" placeholder="Link da Imagem">
+                    <div class="w-full h-20 flex justify-center items-start flex-col pl-7">
+                        <label for="obra_title" class="ml-2 text-base text-white font-bold">Link da imagem</label>
+                        <div class="w-full flex justify-center items-start flex-col">
+                            <input type="text" onblur="image_selector(this)" class="w-8/12 h-8 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300">
                         </div>
                     </div>
                     <div class="w-full h-1/6 flex justify-center items-center">
