--- a/rating.html
+++ b/rating.html
@@ -41,15 +41,7 @@
                     <div class="w-9/12 h-full flex justify-center items-center">Avaliações</div>
                 </a>
             </div>
-            <div class="w-56 h-1/6 flex justify-end items-center flex-col">
-                <div
-                    class="w-full h-14 flex justify-center items-center cursor-pointer transition-all hover:bg-gray-100 hover:drop-shadow active:bg-gray-300">
-                    <div class="w-3/12 h-full flex justify-center items-center font-bold text-2xl">
-                        <i class="fa-solid fa-gear"></i>
-                    </div>
-                    <div class="w-9/12 h-full flex justify-center items-center">Configurações</div>
-                </div>
-            </div>
+            <div class="w-56 h-1/6 flex justify-end items-center flex-col"></div>
         </nav>
         <menu class="fixed w-full flex justify-center items-center flex-col z-10">
             <aside class="w-full h-14 flex justify-center items-center bg-gray-200">
@@ -72,12 +64,8 @@
                     <div class="text-white font-bold text-2xl drop-shadow-2xl">Avaliações:</div>
                 </div>
                 <div class="w-1/3 h-full flex justify-center items-center"></div>
-                <div class="w-1/3 h-full flex justify-start items-end gap-x-2">
-                    <div class="py-1 px-5 pl-4 gap-x-2 flex justify-center items-center font-bold text-gray-300 rounded-lg border border-solid border-gray-300 cursor-pointer transition-all hover:shadow hover:bg-gray-300 hover:text-black hover:border-0">
-                        <i class="fa-solid fa-sliders"></i>
-                        <div>Filtros</div>
-                    </div>
-                    <div onclick="rating_insert(this)" data-insert="1" data-screen_num="4" class="py-1 px-5 flex justify-center items-center font-bold text-gray-300 rounded-lg border border-solid border-gray-300 cursor-pointer transition-all hover:shadow hover:bg-gray-300 hover:text-black hover:border-0">
+                <div class="w-1/3 h-full flex justify-center items-end gap-x-2">
+                    <div onclick="rating_insert(this)" data-insert="1" data-screen_num="4" class="mr-20 py-1 px-5 flex justify-center items-center font-bold text-gray-300 rounded-lg border border-solid border-gray-300 cursor-pointer transition-all hover:shadow hover:bg-gray-300 hover:text-black hover:border-0">
                         Adicionar Avaliação
                     </div>
                 </div>
@@ -90,6 +78,7 @@
                                 <th class="w-1/12">ID</th>
                                 <th class="w-1/12">Nota</th>
                                 <th class="w-1/12">ID da Obra</th>
+                                <th class="w-1/12"></th>
                                 <th class="w-1/12"></th>
                                 <th class="w-1/12"></th>
                             </tr>
@@ -141,7 +130,7 @@
                 <div class="w-8/12 h-full flex justify-start items-center flex-col">
                     <div class="w-full h-20 flex justify-center items-start flex-col pl-7">
                         <label for="obra_title" class="ml-2 text-base text-white font-bold">Nome da Obra</label>
-                        <input type="text" id="obra_title" name="obra_title" class="w-8/12 h-8 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300">
+                        <input onblur="input_verifyer(this)" data-type="0" type="text" id="obra_title" name="obra_title" class="w-8/12 h-8 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300">
                     </div>
                     <div class="w-full h-1/6 flex justify-center items-center">
                         <div class="w-4/12 h-full flex justify-center gap-y-1 items-center flex-col">
@@ -152,13 +141,13 @@
                             </div>
                         </div>
                         <div class="w-8/12 h-full py-0.5 flex justify-start items-end ">
-                            <input type="text" onblur="image_selector(this)" id="obra_title" name="obra_title" disabled class="w-9/12 h-9 mb-2.5 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" placeholder="Link da Imagem">
+                            <input onblur="input_verifyer(this)" data-type="0" type="text" onblur="image_selector(this)" id="obra_title" name="obra_title" disabled class="w-9/12 h-9 mb-2.5 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" placeholder="Link da Imagem">
                         </div>
                     </div>
                     <div class="w-full h-1/6 flex justify-center items-center">
                         <div class="w-1/3 h-full flex justify-center items-center flex-col gap-y-0.5">
                             <label for="" class="text-base text-white font-bold">Gênero da obra</label>
-                            <select id="genre_select" class="w-9/12 py-1.5 px-2 text-sm text-white rounded drop-shadow-2xl shadow-2xl backdrop-blur outline-none transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300">
+                            <select onblur="input_verifyer(this)" data-type="1" id="genre_select" class="w-9/12 py-1.5 px-2 text-sm text-white rounded drop-shadow-2xl shadow-2xl backdrop-blur outline-none transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300">
                                 <option value="-1" class="text-black font-bold">Selecione</option>
                                 <option value="0" class="text-black font-bold">1</option>
                                 <option value="1" class="text-black font-bold">2</option>
@@ -184,7 +173,7 @@
                     </div>
                     <div class="w-full flex justify-start items-start flex-col pl-5 gap-y-1 grow">
                         <label for="" class="ml-2 text-base text-white font-bold">Sinopse</label>
-                        <textarea name="" id="" class="w-9/12 h-4/6 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300" cols="30" rows="10"></textarea>
+                        <textarea onblur="input_verifyer(this)" data-type="2" name="" id="" class="w-9/12 h-4/6 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300" cols="30" rows="10"></textarea>
                     </div>
                 </div>
                 <div class="w-4/12 h-full flex justify-center items-center flex-col">
@@ -212,7 +201,7 @@
         <div class="w-3/12 h-36 hidden justify-center items-center flex-col drop-shadow-2xl shadow-2xl backdrop-blur-lg rounded-lg bg-[rgba(0,0,0,0.5)]">
             <div class="w-full h-4/6 flex justify-evenly items-center flex-col px-5 break-all text-base text-white font-bold drop-shadow-2xl">
                 <label for="" class="self-start text-white text-lg font-bold">Adicionar Gênero</label>
-                <input type="text" class="w-9/12 h-9 mb-2.5 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" placeholder="Nome do gênero">
+                <input onblur="input_verifyer(this)" data-type="0" type="text" class="w-9/12 h-9 mb-2.5 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" placeholder="Nome do gênero">
             </div>
             <div class="w-full h-2/6 flex justify-evenly items-center">
                 <div onclick="genre_submit(this)" id="genre_cancel" data-submit="0" class="w-4/12 h-9 flex justify-center items-center text-white font-bold rounded-sm drop-shadow-2xl shadow-2xl cursor-pointer transition-all hover:bg-gray-400 hover:border-0 active:bg-gray-500 border border-solid border-gray-300">Cancelar</div>
@@ -229,7 +218,7 @@
                     <div class="w-full h-1/6 flex justify-center items-center">
                         <div class="w-4/6 h-full flex justify-center items-center flex-col gap-y-0.5">
                             <label for="" class="self-start ml-11 text-base text-white font-bold">Nome da Obra</label>
-                            <select id="genre_select" onchange="switch_image(this)" class="w-10/12 py-1.5 px-2 text-sm text-white rounded drop-shadow-2xl shadow-2xl backdrop-blur outline-none transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300">
+                            <select onblur="input_verifyer(this)" data-type="1" id="genre_select" onchange="switch_image(this)" class="w-10/12 py-1.5 px-2 text-sm text-white rounded drop-shadow-2xl shadow-2xl backdrop-blur outline-none transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300">
                                 <option value="-1" class="text-black font-bold">Selecione</option>
                                 <option value="0" class="text-black font-bold">1</option>
                                 <option value="1" class="text-black font-bold">2</option>
@@ -240,12 +229,12 @@
                         </div>
                         <div class="w-2/6 h-full flex justify-center items-start flex-col gap-y-0.5">
                             <label for="" class="ml-1 text-base text-white font-bold">Avaliação (0 - 100)</label>
-                            <input type="number" id="obra_title" min="0" max="100" name="obra_title" class="w-10/12 h-9 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" value="0">
+                            <input onblur="input_verifyer(this)" data-type="3" type="number" id="obra_title" min="0" max="100" name="obra_title" class="w-10/12 h-9 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] disabled:opacity-50 border border-solid border-gray-300" value="0">
                         </div>
                     </div>
                     <div class="w-full flex justify-start items-start flex-col pl-5 gap-y-1 grow">
                         <label for="" class="ml-2 text-base text-white font-bold">Avaliação Escrita</label>
-                        <textarea name="" id="" class="w-9/12 h-3/6 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300" cols="30" rows="10"></textarea>
+                        <textarea onblur="input_verifyer(this)" data-type="2" name="" id="" class="w-9/12 h-3/6 py-1.5 px-2 text-xs text-white drop-shadow-2xl rounded drop-shadow-2xl shadow-2xl backdrop-blur transition-all focus:outline focus:outline-2 focus:outline-white bg-[rgba(255,255,255,0.2)] border border-solid border-gray-300" cols="30" rows="10"></textarea>
                     </div>
                 </div>
                 <div class="w-4/12 h-full flex justify-center items-center flex-col">
@@ -255,6 +244,36 @@
                     <div class="w-full h-1/3 flex justify-evenly items-end pb-3">
                         <div onclick="rating_submit(this)" id="rating_confirm" data-submit="1" class="w-5/12 h-9 flex justify-center items-center text-white font-bold rounded-sm cursor-pointer transition-all hover:bg-gray-400 hover:border-0 active:bg-gray-500 border border-solid border-gray-300">Salvar</div>
                         <div onclick="rating_submit(this)" id="rating_cancel" data-submit="0" class="w-5/12 h-9 flex justify-center items-center text-white font-bold rounded-sm cursor-pointer transition-all hover:bg-gray-400 hover:border-0 active:bg-gray-500 border border-solid border-gray-300">Cancelar</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="w-6/12 h-96 hidden justify-start items-center flex-col drop-shadow-2xl shadow-2xl backdrop-blur-lg rounded-lg bg-[rgba(0,0,0,0.5)]">
+            <div class="w-full h-14 px-5 flex justify-between items-center">
+                <div class="text-2xl text-white font-bold drop-shadow-2xl shadow-2xl"></div>
+                <i onclick="close_rating(this)" class="fa-solid fa-xmark py-2 px-2.5 border border-solid border-white text-white rounded-full cursor-pointer transition-all hover:bg-red-500 hover:border-0 active:bg-red-400"></i>
+            </div>
+            <div class="w-full grow flex justify-center items-center">
+                <div class="w-8/12 h-full flex justify-start items-center flex-col">
+                    <div class="w-full h-1/6 flex justify-center items-start px-5">
+                        <div class="w-full flex justify-start items-end gap-x-5 text-white font-bold whitespace-nowrap">
+                            <div class="text-2xl">Nome da Obra:</div>
+                            <div class="text-lg whitespace-nowrap overflow-hidden text-ellipsis">Bob Esponja</div>
+                        </div>
+                    </div>
+                    <div class="w-full h-9 flex justify-center items-end px-5">
+                        <div class="w-full flex justify-start items-center gap-x-2 text-white font-bold whitespace-nowrap">
+                            <div class="text-lg">Avaliação:</div>
+                            <div>Bob Esponja</div>
+                        </div>
+                    </div>
+                    <div class="w-full grow max-h-56 flex justify-start items-start p-5 text-white indent-10 break-words overflow-auto">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, ad nemo placeat eum ipsa eos at natus, enim pariatur excepturi suscipit numquam, neque accusamus quae velit. Ipsa quisquam aut nobis?
+                    </div>
+                </div>
+                <div class="w-4/12 h-full flex justify-center items-center flex-col">
+                    <div class="w-full h-5/6 flex justify-center items-center">
+                        <div class="w-9/12 h-full rounded-lg drop-shadow-2xl shadow-2xl bg-center bg-no-repeat bg-cover"></div>
                     </div>
                 </div>
             </div>
